--- a/classroompractice/src/app/my/my.component.html
+++ b/classroompractice/src/app/my/my.component.html
@@ -1,3 +1,21 @@
-<div>
-  <h2>My Components Works</h2>
+<div class="container">
+  <div class="row">
+    <form>
+      <h2>Add record</h2>
+      <div class="form-group">
+        <label for="formGroupExampleInput">Jogging date:</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="mm/dd/yyyy">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput2">Distance (m)</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="0">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput3">Time (s)</label>
+        <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="0">
+      </div>
+      <button class="btn btn-primary" type="submit">Save</button>
+    </form>
+  </div>
 </div>
+
