Изменил app.component.html

--- a/classroompractice/src/app/app.component.html
+++ b/classroompractice/src/app/app.component.html
@@ -1,5 +1,9 @@
-<h1>
-  Jogging diary
-</h1>
+<div class="container">
+  <h1 class="mt-3 mb-1">
+    Jogging diary
+  </h1>
+  <hr class="mb-5">
+  <app-my></app-my>
+</div>
 
-<app-my></app-my>
+
