В app.component.styl изменил стиль

--- a/classroompractice/src/app/app.component.html
+++ b/classroompractice/src/app/app.component.html
@@ -3,7 +3,10 @@
     Jogging diary
   </h1>
   <hr class="mb-5">
-  <app-my></app-my>
+  <div class="row">
+    <app-my></app-my>
+    <app-my2></app-my2>
+  </div>
 </div>
 
 
