--- a/classroompractice/src/app/my2/my2.component.html
+++ b/classroompractice/src/app/my2/my2.component.html
@@ -1,4 +1,4 @@
-<h2>My result</h2>
+<h2>My results</h2>
 <button class="btn btn-primary mb-3" type="submit">New</button>
   <table class="table">
     <thead class="thead-light">
