Изменил app component все

--- a/classroompractice/src/app/app.component.html
+++ b/classroompractice/src/app/app.component.html
@@ -1,12 +1,24 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+<app-header></app-header>
+
 <div class="container">
-  <h1 class="mt-3 mb-1">
-    Jogging diary
-  </h1>
-  <hr class="mb-5">
-  <div class="row">
+  <div class="row mt-5 mb-5">
     <app-my></app-my>
-    <app-my2></app-my2>
   </div>
 </div>
+<app-footer></app-footer>
+</body>
+</html>
+
+
 
 
