Изменил my2 component это один my.results

--- a/classroompractice/src/app/my2/my2.component.html
+++ b/classroompractice/src/app/my2/my2.component.html
@@ -53,6 +53,13 @@
       <td>6.24</td>
       <td>Edit Delete</td>
     </tr>
+    <tr>
+      <td>{{ my2.date}}</td>
+      <td>{{my2.distance}}</td>
+      <td>{{my2.time}}</td>
+      <td>6.24</td>
+      <td>Edit Delete</td>
+    </tr>
     </tbody>
   </table>
 
