Изменил структуру проекта добавил компоненты по названию

--- a/classroompractice/src/app/app.component.html
+++ b/classroompractice/src/app/app.component.html
@@ -12,10 +12,11 @@
 
 <div class="container">
   <div class="row mt-5 mb-5">
-    <app-my></app-my>
+<!--    <app-my></app-my>-->
+    <app-addrecord></app-addrecord>
   </div>
 </div>
-<app-footer></app-footer>
+   <app-footer></app-footer>
 </body>
 </html>
 
