--- a/classroompractice/src/app/my/my.component.html
+++ b/classroompractice/src/app/my/my.component.html
@@ -4,20 +4,21 @@
       <h2>Add record</h2>
       <div class="form-group">
         <label>Jogging date:</label>
-        <input type="text" class="form-control" placeholder="mm/dd/yyyy" [(ngModel)]="date">
+        <input type="text" class="form-control" placeholder="mm/dd/yyyy" >
       </div>
       <div class="form-group">
         <label >Distance (m)</label>
-        <input type="text" class="form-control"  placeholder="0" [(ngModel)]="distance">
+        <input type="text" class="form-control"  placeholder="0">
       </div>
       <div class="form-group">
         <label>Time (s)</label>
-        <input type="text" class="form-control" placeholder="0" [(ngModel)]="time">
+        <input type="text" class="form-control" placeholder="0">
       </div>
-      <button class="btn btn-primary" type="submit" (click)="addRecord()">Save</button>
+      <button class="btn btn-primary" type="submit" >Save</button>
+      <button class="btn btn-primary" type="submit" >Save</button>
     </form>
   </div>
-  <app-my2 *ngFor="let my2 of results"  style="  width: 77%; margin-left: 50px;"></app-my2>
+<!--  <app-my2 *ngFor="let my2"  style="  width: 77%; margin-left: 50px;"></app-my2>-->
 </div>
 
 
